FINAL CHANGES FOR REAL

--- a/Project4/index.html
+++ b/Project4/index.html
@@ -41,12 +41,14 @@
 
                     <h2>About</h2>
 
-                    <p>The Niche Design Conference is an event to discuss the numerous unqiue design jobs and postions
+                    <p>The Niche Design Conference is an event to discuss the numerous unique design jobs and positions
                         available to up-and-coming
-                        designers. 3 speakers will discuss their unique jobs design and talk about their craft and
+                        designers. 3 speakers will discuss their unique jobs in the design field and talk about their
+                        craft and
                         career.</p>
                     <p>Location: Baltimore Convention Center</p>
                     <p>Date: July 10th</p>
+                    <p>10am-4pm</p>
                 </section>
                 <section id="speakers">
                     <h2>Speakers</h2>
@@ -85,7 +87,7 @@
                     <img src="images/linegraphic.svg" alt="">
                     <p>12:15pm - 1:15pm - Nicole Lazzaro: Using Emotions to Create Engaging Design</p>
                     <img src="images/linegraphic.svg" alt="">
-                    <p>2:00pm - 3pm - Kyle Bean: Applying Personal Style for Brands</p>
+                    <p>2:00pm - 3pm - Kyle Bean: Applying Personal Style to Brand Work</p>
                 </section>
                 <section id="contact">
                     <h2>Contact</h2>
@@ -119,3 +121,24 @@
 
 
 </html>
+
+<!-- 
+    
+    S
+     O
+      U
+       R
+        C
+         E
+          S
+
+Annie Atkins photo and Description information -- https://www.annieatkins.com/
+Annie Atkins talk -- https://www.youtube.com/watch?v=SzGvEYSzHf4
+Kyle Bean Photo and Description information -- https://kylebean.co.uk/
+Nicole Lazzaro Information -- https://www.linkedin.com/in/nicolelazzaro
+Nicole Lazzaro photo -- https://twitter.com/NicoleLazzaro?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor
+Nicole Lazzaro talk -- https://www.youtube.com/watch?v=EEmNRRRqgNc&t=1081s
+Font -- https://fonts.google.com/specimen/Heebo
+Icons -- https://fontawesome.com/icons/twitter?style=brands   https://fontawesome.com/icons/instagram?style=brands
+
+-->
